--- a/ui/mods/bulk_create_units/bulk_paste_count.html
+++ b/ui/mods/bulk_create_units/bulk_paste_count.html
@@ -1,7 +1,7 @@
 <div style="display: inline-block">
   <input type="text" id="bulk-paste-count-slider" class="slider" value="10"
-    data-slider-handle="square" data-slider-orientation="horizontal" data-slider-selection="none" data-slider-tooltip="show" 
-    data-bind="slider: { value: bulkPasteCount, options: bulkPasteOptions }" />
+    data-slider-handle="square" data-slider-orientation="horizontal" data-slider-selection="none" data-slider-tooltip="hide" 
+    data-bind="slider: { value: bulkPasteSlider, options: bulkPasteOptions }" />
   <input type="text" id="bulk-paste-count-text" value="10" size="3"
     data-bind="value: bulkPasteCount" />
 </div>
