--- a/ui/mods/bulk_create_units/bulk_paste_count.html
+++ b/ui/mods/bulk_create_units/bulk_paste_count.html
@@ -1,4 +1,4 @@
-<div class = "bulk-paste-container" style="display: inline-block">
+<div id="bulk-paste-container" style="display: inline-block">
   <input type="text" id="bulk-paste-count-slider" class="slider" value="10"
     data-slider-handle="square" data-slider-orientation="horizontal" data-slider-selection="none" data-slider-tooltip="hide" 
     data-bind="slider: { value: bulkPasteSlider, options: bulkPasteOptions }" />
